[package]
name = "clow"
version = "0.1.0"
authors = ["king1600"]
edition = "2018"

[dependencies]
clowc = { path = "./clowc" }
clowrt = { path = "./clowrt" }

[profile.dev]
lto = false
debug = true
opt-level = 0
codegen-units = 8
incremental = true
overflow-checks = false

[profile.release]
lto = true
debug = false
opt-level = 3
panic = 'abort'
codegen-units = 1
incremental = false
overflow-checks = false
debug-assertions = false